<resources>
    <string name="app_name">Shopping Cart</string>
    <string name="welcome">Welcome to</string>
    <string name="home_company_name">The Mall of Lahore</string>
    <string name="company_motto_1">We offer you many things to shop online. If you want to proceed for an order please click on NEXT.</string>
    <string name="next_button">NEXT</string>
    <string name="show_all_record">Show Previous Orders</string>
    <string name="previous">PREVIOUS</string>
    <string name="submit">SUBMIT REQUEST</string>
    <string name="header_heading">Order of Online Shopping</string>
    <string name="header_msg_line_1">Fill out the form or call</string>
    <string name="header_msg_line_2">to complete your order!</string>
    <string name="header_phone_no">042 357 8579</string>
    <string name="sub_heading_select_item">Select Item(s)</string>
    <string name="sub_heading_personal_details">Personal Details</string>
    <string name="sub_heading_company_details">Company Details</string>
    <string name="sub_heading_order_list">Order Detail</string>
    <string name="sub_heading_success">Order\'s:</string>
    <string name="items_paper">Papers</string>
    <string name="items_stationery">Other Stationery</string>
    <string name="item_hard_drive">Hard Drive</string>
    <string name="items_other_1">Others Waste Material</string>
    <string name="required">* Required</string>
    <string name="f_name">First Name *:</string>
    <string name="l_name">Last Name *:</string>
    <string name="email">Email ID *:</string>
    <string name="no">Contact No. *:</string>
    <string name="order_company_name">Company Name *:</string>
    <string name="zip">Zip Code *:</string>
    <string name="state">Sate *:</string>
    <string name="city">City *:</string>
    <string name="possible_boxes">Possible Boxes *:</string>
    <string-array name="possible_boxes_no">
        <item name="NA"> NA</item>
        <item name="1–20">1–20 boxes</item>
        <item name="50–100">50–100 boxes</item>
        <item name="500–1000">500–1000 boxes</item>
        <item name="5000–10000">5000–10000 boxes</item>
    </string-array>
    <string name="thank_you">Thank You for choosing our application.</string>
    <string name="data_msg">We have found your request with following data:</string>
    <string name="show_category">Category: </string>
    <string name="show_full_name">Name: </string>
    <string name="show_company_name">Company Name: </string>
    <string name="show_email">Email: </string>
    <string name="show_contact">Contact: </string>
    <string name="show_address">Address: </string>
    <string name="show_no_of_boxes">No. of Boxes: </string>
    <string name="verify_1">Quotation will be sent to your Email ID and Contact Number.</string>
    <string name="email_email_com">email@email.com</string>
    <string name="_0900788601">0900788601</string>
    <string name="last_name">Ahmed</string>
    <string name="ali">Ali</string>
    <string name="company">Company</string>
    <string name="_54000">54000</string>
    <string name="pakistan">Pakistan</string>
    <string name="lahore">Lahore</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="person_image">Person Image</string>
    <string name="simple_alert_dialog">Are you sure, you want to delete selection?</string>
    <string name="add">Create New Order</string>

</resources>